--- a/app/assets/javascripts/newspaper_works/thumbnail_highlights.js.erb
+++ b/app/assets/javascripts/newspaper_works/thumbnail_highlights.js.erb
@@ -1,17 +1,6 @@
 /* highlight the query term on the search result thumbnail */
 /* heavily based on https://github.com/mlibrary/fishrappr -> results_page_highlighting.js */
 
-/*
-  TODO:
-   - remove console logging
-   - remove commented out leftovers
-   - how to deal with multi-word or phrase queries?
-   - ask Sean -- get height and width into coords.json
-                 if we can do this:
-                  - remove index_dimensions stuff from IndexesRelationships
-                  - change how script accesses dimensions data
-*/
-
 $().ready(function() {
     // we use dummy value so we can use rails url_helper for URL (have to pass id)
     var coordsUrl = '<%= Hyrax::Engine.routes.url_helpers.download_path("xyz", file: "json") %>';
@@ -47,8 +36,8 @@ $().ready(function() {
 
                 var thumbWidth = $thumb.width();
                 var thumbHeight = $thumb.height();
-                var trueWidth = parseFloat($div.data('width'));
-                var trueHeight = parseFloat($div.data('height'));
+                var trueWidth = data['width'];
+                var trueHeight = data['height'];
                 var hScale = thumbWidth / trueWidth;
                 var vScale = thumbHeight / trueHeight;
                 var paddingLeft, paddingTop;
@@ -66,31 +55,48 @@ $().ready(function() {
                     paddingTop = 0;
                 }
 
-                var words = data['words'].filter(function(w) {
-                    return RegExp(query.toLowerCase()).test(w['word'].toLowerCase())
-                });
-                if (words.length == 0) { return ; }
+                var queries = query.split(' ');
 
-                $.each(words, function(_idx, word) {
-                    var coords = word['coordinates']
-                    if ( coords == null ) { return; }
+                $.each(data['coords'], function (k, v) {
+                    if (!inTerms(k, queries)) {
+                        return;
+                    }
 
-                    // decrease left, top; increase height, width
-                    // so that highlight surrounds image with a bit of padding
-                    var left = Math.round(coords[0] * hScale) + paddingLeft - 2;
-                    var top = Math.round(coords[1] * vScale) + paddingTop - 2;
-                    var width = Math.round(coords[2] * hScale) + 3;
-                    var height = Math.round(coords[3] * vScale) + 3;
-                    var unit = 'px';
+                    for (var i=0; i < v.length; i++) {
+                        var coords = v[i];
+                        if ( coords == null ) { return; }
 
-                    // make sure highlight div isn't too small, else won't be visible
-                    if ( height < 5 ) { height = 5; }
-                    if ( width < 10 ) { width = 10; }
+                        // decrease left, top; increase height, width
+                        // so that highlight surrounds image with a bit of padding
+                        var left = Math.round(coords[0] * hScale) + paddingLeft - 2;
+                        var top = Math.round(coords[1] * vScale) + paddingTop - 2;
+                        var width = Math.round(coords[2] * hScale) + 3;
+                        var height = Math.round(coords[3] * vScale) + 3;
+                        var unit = 'px';
 
-                    var $span = $('<div class="thumbail_highlight"></div>').css({ top: top + unit, left: left + unit, width: width + unit, height: height + unit });
-                    $span.appendTo($div);
+                        // make sure highlight div isn't too small, else won't be visible
+                        if ( height < 5 ) { height = 5; }
+                        if ( width < 10 ) { width = 10; }
+
+                        var $span = $('<div class="thumbail_highlight"></div>').css({ top: top + unit, left: left + unit, width: width + unit, height: height + unit });
+                        $span.appendTo($div);
+                    }
                 })
             }
         });
     };
 })
+
+function matchesTerm(ocr_string, query) {
+    var key = ocr_string.toLocaleLowerCase();
+    return key.indexOf(query.toLocaleLowerCase()) > -1;
+}
+
+function inTerms(ocr_string, queries) {
+    for (var i = 0; i < queries.length; i++) {
+        if (matchesTerm(ocr_string, queries[i])) {
+            return true;
+        }
+    }
+    return false;
+}
