fix failing specs and rubocop cleanup

--- a/app/assets/javascripts/newspaper_works/thumbnail_highlights.js.erb
+++ b/app/assets/javascripts/newspaper_works/thumbnail_highlights.js.erb
@@ -78,7 +78,7 @@ $().ready(function() {
                         if ( height < 5 ) { height = 5; }
                         if ( width < 10 ) { width = 10; }
 
-                        var $span = $('<div class="thumbail_highlight"></div>').css({ top: top + unit, left: left + unit, width: width + unit, height: height + unit });
+                        var $span = $('<div class="thumbnail_highlight"></div>').css({ top: top + unit, left: left + unit, width: width + unit, height: height + unit });
                         $span.appendTo($div);
                     }
                 })
