--- a/app/assets/stylesheets/newspaper_works/_search_results.scss
+++ b/app/assets/stylesheets/newspaper_works/_search_results.scss
@@ -1,4 +1,4 @@
-#search-results .thumbail_highlight, #documents .thumbail_highlight {
+#search-results .thumbnail_highlight, #documents .thumbnail_highlight {
   background-color: rgba(5,166,86,0.36);
   z-index: 1000;
   position: absolute;
