--- a/app/views/hyrax/newspaper_titles/_issues_calendar.html.erb
+++ b/app/views/hyrax/newspaper_titles/_issues_calendar.html.erb
@@ -3,7 +3,19 @@
     <div id="issues_calendar_title">
     <h2 align="center">
       <%= link_to("<<", main_app.hyrax_newspaper_title_path(params[:id], year: years[:previous])) if years[:previous] %>
-      Issues: <%= years[:current] %>
+      Issues:
+      <% if (years[:all].count >= 1) %>
+        <% year_select_options = Hash[years[:all].collect { |y| [y, url_for(main_app.hyrax_newspaper_title_path(params[:id], year: y))] }] %>
+        <%= year_select_options %>
+        <%= select_tag :year, options_for_select(year_select_options) %>
+      <% else %>
+        <%= years[:current] %>
+      <% end %>
+      <hr>
+      <%= years %>
+      <hr>
+      <%= years[:all].count %>
+      <hr>
       <%= link_to(">>", main_app.hyrax_newspaper_title_path(params[:id], year: years[:next])) if years[:next] %>
     </h2>
     </div>
@@ -23,9 +35,10 @@
       <% month_start_print = month_start - month_start.wday %>
       <% month_end_print = (month_end + 6) - (month_end.wday) %>
       <% (month_start_print).upto(month_end_print) do |d| %>
-        <div class="day calendar_day <%= "calendar_day_inactive" if d.month != month  %> <%= "adjacent_month" if d.month != month %> <%= "cal-#{d.strftime("%Y-%m-%d")}" %>">
+        <% day_is_in_current_month = d.month == month ? true : false %>
+        <div class="day calendar_day <%= "calendar_day_inactive" if !day_is_in_current_month  %> <%= "adjacent_month" if d.month != month %> <%= "cal-#{d.strftime("%Y-%m-%d")}" %>">
           <% issue = issues.select {|issue| Date.parse(issue["publication_date_dtsim"].first) == d }.first %>
-          <% if issue %>
+          <% if issue && day_is_in_current_month %>
             <strong><%= link_to d.day, main_app.hyrax_newspaper_issue_path(issue) %></strong>
           <% else %>
             <%= d.day %>
@@ -49,3 +62,8 @@
     </div>
   </div>
 </div>
+<script>
+  $(function(){
+    $('#year').on('change', function() { window.location = $(this).val() });
+  });
+</script>
