--- a/app/views/hyrax/newspaper_titles/_issues_calendar.html.erb
+++ b/app/views/hyrax/newspaper_titles/_issues_calendar.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div id="issues_calendar" class="row">
+  <div id="issues_calendar" class="issues_calendar row">
     <div id="issues_calendar_title">
     <h2 align="center">
       <%= link_to("<<", main_app.hyrax_newspaper_title_path(params[:id], year: years[:previous])) if years[:previous] %>
