--- a/app/views/newspaper_works/newspapers_search/_snippets_more.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_snippets_more.html.erb
@@ -1,15 +1,16 @@
 <%# additional ocr snippets, with a Bootstrap collapse toggle control %>
-<div class="collapse ocr_snippet" id="<%= "snippet_collapse_#{counter}" %>">
+<% unique_id = instance_variable_names.object_id %>
+<div class="collapse ocr_snippet" id="<%= "snippet_collapse_#{unique_id}" %>">
   <% snippets.each do |snippet| %>
     <%= content_tag('div',
                     "... #{snippet} ...".html_safe,
                     class: 'ocr_snippet') %>
   <% end %>
 </div>
-<%= link_to(t('blacklight.ocr.search.results.snippets.more'),
-            "#snippet_collapse_#{counter}",
+<%= link_to(t('blacklight.search.results.snippets.more'),
+            "#snippet_collapse_#{unique_id}",
             data: {toggle: 'collapse'},
             'aria-expanded' => 'false',
-            'aria-controls' => "#snippet_collapse_#{counter}",
+            'aria-controls' => "#snippet_collapse_#{unique_id}",
             class: 'ocr_snippets_expand js-controls')
 %>
