--- a/app/views/catalog/_snippets_more.html.erb
+++ b/app/views/catalog/_snippets_more.html.erb
@@ -1,6 +1,5 @@
 <%# additional ocr snippets, with a Bootstrap collapse toggle control %>
-<% unique_id = instance_variable_names.object_id %>
-<div class="collapse ocr_snippet" id="<%= "snippet_collapse_#{unique_id}" %>">
+<div class="collapse ocr_snippet" id="<%= "snippet_collapse_#{document_id}" %>">
   <% snippets.each do |snippet| %>
     <%= content_tag('div',
                     "... #{snippet} ...".html_safe,
@@ -8,9 +7,9 @@
   <% end %>
 </div>
 <%= link_to(t('blacklight.search.results.snippets.more'),
-            "#snippet_collapse_#{unique_id}",
+            "#snippet_collapse_#{document_id}",
             data: {toggle: 'collapse'},
             'aria-expanded' => 'false',
-            'aria-controls' => "#snippet_collapse_#{unique_id}",
+            'aria-controls' => "#snippet_collapse_#{document_id}",
             class: 'ocr_snippets_expand js-controls')
 %>
