Accommodate both Hyrax 2 and Hyrax 3 variants of Hyrax::BasicMetadata in all work types including it.
alternative_title is renamed to alt_title to harmonize.  Other fields
are added to expected secondary fields, based on version.
NewspaperPageForm omits new fields.

--- a/app/views/newspaper_works/base/_attribute_rows.html.erb
+++ b/app/views/newspaper_works/base/_attribute_rows.html.erb
@@ -1,7 +1,7 @@
 <%# newspaper_core_metadata attributes %>
 <%= presenter.attribute_to_html(:date_modified, label: t('hyrax.base.show.last_modified'), html_dl: true) %>
-<%= presenter.attribute_to_html(:alternative_title,
-                                label: t('newspaper_works.attributes.alternative_title.label'),
+<%= presenter.attribute_to_html(:alt_title,
+                                label: t('newspaper_works.attributes.alt_title.label'),
                                 html_dl: true) %>
 <%= presenter.attribute_to_html(:genre,
                                 label: t('newspaper_works.attributes.genre.label'),
