--- a/app/views/records/edit_fields/_alternate_title.html.erb
+++ b/app/views/records/edit_fields/_alternate_title.html.erb
@@ -1,4 +1,4 @@
 <% # app/views/records/edit_fields/_alternate_title.html.erb %>
-<%= f.input :alternative_title, required: f.object.required?(key),
+<%= f.input :alt_title, required: f.object.required?(key),
     input_html: { class: 'form-control', multiple: true }
 %>
