Update typo in locale and move partial for parent relationship

--- a/app/views/hyrax/base/_form_relationships.html.erb
+++ b/app/views/hyrax/base/_form_relationships.html.erb
@@ -14,4 +14,4 @@
   <%= render 'form_child_work_relationships', f: f %>
 <% end %>
 
-<%= render 'parent_work', f: f %>
+<%= render 'newspaper_works/base/parent_work', f: f %>
